# creator-graphrag

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  start.bat  tmp_body.json  watch_jobs.py
alembic/: alembic.ini  env.py
alembic/versions/: 0000_users_auth.py  0001_core_enums.py  0002_books_files.py  0003_ingestion_jobs.py  0004_chapters_pages.py  0005_chunks_citations.py  0006_knowledge_units.py  0007_video_packages.py
apps/api/: Dockerfile
apps/api/app/: main.py
apps/api/app/core/: config.py  errors.py  logging.py  security.py
apps/api/app/infrastructure/: celery_client.py
apps/api/app/utils/: lang_detect.py  text_clean.py  transliteration.py
apps/api/scripts/: rebuild_neo4j_graph.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_auth.py  test_books.py  test_graph.py  test_knowledge_units.py  test_search.py  test_video_packages.py
apps/api/tests/unit/: test_lang_detect.py  test_text_clean.py
apps/web/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/api/: client.ts
apps/web/src/components/: Layout.tsx
apps/web/src/pages/: BooksPage.tsx  DashboardPage.tsx  GraphPage.tsx  KnowledgeUnitsPage.tsx  LoginPage.tsx  SearchPage.tsx  VideoPackagesPage.tsx
apps/worker/: Dockerfile
apps/worker/app/: worker.py
data/stopwords/: hi.txt  mr.txt
docs/: EVAL_RESEARCH.md  STANDARDS.md  USER_STORIES.md
scripts/: _check_ku.py  backup_dbs.py  build_knowledge_graph.py  db_manager.py  dev_seed.py  eval_run.py  extract_knowledge_units.py  fix_book_ownership.py  fix_incomplete_extractions.py  gen_golden_facts.py  generate_golden_facts_from_books.py  import_sarvam.py  init_neo4j.py  init_qdrant.py  monitor_extraction.sh  run_ingestion.py  sarvam_colab_reference.py  sarvam_extract.py  seed_books.py  seed_templates.py  test_pageindex.py
tests/: pageindex_eval_results.json
tests/fixtures/: README.md
tests/golden_facts/: ANNOTATION_GUIDE.md  BOOK_PRIORITY.md  _template.jsonl  agriculture-ancient-india.jsonl  agrihistory-vol1.jsonl  agrihistory-vol2.jsonl  agrihistory-vol3.jsonl  an-agricultural-testament.jsonl  handbook-indian-agriculture.jsonl  iitka-traditional-knowledge.jsonl  introduction-to-natural-farming.jsonl  inventory-itk-vol1.jsonl  inventory-itk-vol2.jsonl  krishi-parashar.jsonl  natural-farming-sustainable-agriculture.jsonl  technical-manual-natural-farming.jsonl  vriksha-ayurveda.jsonl
tests/golden_queries/: golden_queries.jsonl
(+66 files in other folders)
