[tool.poetry]
name = "creator-graphrag"
version = "0.1.0"
description = "Multilingual Book Knowledge Base → GraphRAG Video Content Generator"
authors = []
packages = [
    { include = "app", from = "apps/api" },
    { include = "app", from = "apps/worker" },
    { include = "shared", from = "libs" },
]

[tool.poetry.dependencies]
python = "^3.12"

# API
fastapi = "^0.111.0"
uvicorn = { version = "^0.29.0", extras = ["standard"] }
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"

# Auth
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
slowapi = "^0.1.9"

# Database
sqlalchemy = { version = "^2.0.30", extras = ["asyncio"] }
asyncpg = "^0.29.0"
alembic = "^1.13.1"

# Vector DB
qdrant-client = "^1.9.0"

# Graph DB
neo4j = "^5.20.0"

# Object Storage
boto3 = "^1.34.0"

# Worker
celery = { version = "^5.4.0", extras = ["redis"] }
redis = { version = "^5.0.4", extras = ["asyncio"] }

# LLM / Embeddings
openai = "^1.30.0"

# OCR
pytesseract = "^0.3.10"
Pillow = "^10.3.0"
pdfplumber = "^0.11.0"
PyMuPDF = "^1.24.0"

# Document Intelligence (Sarvam AI — Indic-language scanned PDF extraction)
sarvamai = "^0.1.0"

# EPUB
EbookLib = "^0.18"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"

# Language Detection
fasttext = "^0.9.3"

# Transliteration
indic-transliteration = "^2.3.50"

# Text / Tokenization
langdetect = "^1.0.9"

# Observability
structlog = "^24.2.0"
opentelemetry-api = "^1.24.0"
opentelemetry-sdk = "^1.24.0"
opentelemetry-instrumentation-fastapi = "^0.45b0"
opentelemetry-instrumentation-sqlalchemy = "^0.45b0"
opentelemetry-instrumentation-celery = "^0.45b0"
opentelemetry-exporter-otlp = "^1.24.0"

# Templating
jinja2 = "^3.1.4"

# Utilities
httpx = "^0.27.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pytest-timeout = "^2.3.1"
httpx = "^0.27.0"
ruff = "^0.4.7"
mypy = "^1.10.0"
schemathesis = "^3.27.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["apps/api/tests", "apps/worker/tests"]
pythonpath = ["apps/api"]
